--- a/css/main.scss
+++ b/css/main.scss
@@ -6,7 +6,7 @@
 
 
 // Our variables
-$base-font-family: "Hoefler Text", "Baskerville", "Palatino", "Georgia", serif;
+$base-font-family: "Hoefler Text", "Baskerville", "Roboto Slab", "Palatino", "Georgia", serif;
 $sans-font-family: "Gill Sans", "Trebuchet MS", sans-serif;
 $monospace-font-family: 'Monaco', 'Consolas', 'Courier', monospace;
 $base-font-size:   18px;
